// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<div
  class="list-item TASK_ARCHIVED"
>
  <label
    class="checkbox"
  >
    <input
      disabled="disabled"
      name="checked"
      type="checkbox"
    />
     
    <span
      class="checkbox-custom"
    />
  </label>
   
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly="readonly"
      type="text"
    />
  </div>
   
  <div
    class="actions"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  class="list-item TASK_INBOX"
>
  <label
    class="checkbox"
  >
    <input
      disabled="disabled"
      name="checked"
      type="checkbox"
    />
     
    <span
      class="checkbox-custom"
    />
  </label>
   
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly="readonly"
      type="text"
    />
  </div>
   
  <div
    class="actions"
  >
    <a>
      <span
        class="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task List Default 1`] = `
<div
  style="padding: 3rem;"
>
  <div
    class="list-items"
  >
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task List Empty 1`] = `
<div
  style="padding: 3rem;"
>
  <div
    class="list-items"
  >
    <div
      class="wrapper-message"
    >
      <span
        class="icon-check"
      />
       
      <div
        class="title-message"
      >
        We ain't found shit!
      </div>
       
      <div
        class="subtitle-message"
      >
        you can relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task List Loading 1`] = `
<div
  style="padding: 3rem;"
>
  <div
    class="list-items"
  >
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
       
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          Cool
        </span>
         
        <span>
          State
        </span>
      </span>
    </div>
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
       
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          Cool
        </span>
         
        <span>
          State
        </span>
      </span>
    </div>
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
       
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          Cool
        </span>
         
        <span>
          State
        </span>
      </span>
    </div>
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
       
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          Cool
        </span>
         
        <span>
          State
        </span>
      </span>
    </div>
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
       
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          Cool
        </span>
         
        <span>
          State
        </span>
      </span>
    </div>
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
       
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          Cool
        </span>
         
        <span>
          State
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task List With Pinned Tasks 1`] = `
<div
  style="padding: 3rem;"
>
  <div
    class="list-items"
  >
    <div
      class="list-item TASK_PINNED"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="disabled"
          name="checked"
          type="checkbox"
        />
         
        <span
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="readonly"
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  class="list-item TASK_PINNED"
>
  <label
    class="checkbox"
  >
    <input
      disabled="disabled"
      name="checked"
      type="checkbox"
    />
     
    <span
      class="checkbox-custom"
    />
  </label>
   
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly="readonly"
      type="text"
    />
  </div>
   
  <div
    class="actions"
  >
    <a>
      <span
        class="icon-star"
      />
    </a>
  </div>
</div>
`;
